overflow issue solved and hamburger button hidden issue on full screen

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -41,4 +41,10 @@ color: blueviolet;
         align-items: center;
         gap: 30px;
     }
+    .title{
+        font-size: 45px;
+    }
+    .desc{
+        font-size: 30px;
+    }
 }
