--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -17,7 +17,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px 70px;
-
+    margin-bottom: 35px;
     /* gap: 20px; */
 }
 
