--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: space-between;
     margin-top: 49px;
+    margin-bottom: 49px;
     z-index: 1;
     margin-left:10% ;
     margin-right:10% ;
@@ -44,17 +45,35 @@
     background-color:var(--color-primary) ;
     color: var(--color-text);
     border-radius: 100px;
-    font-size: 30px;
+    font-size: 22px;
     font-weight: 600;
-    padding: 17px 26px;
+    padding: 11px 10px;
     box-shadow: 0 0 4px o rgb(0,0,0,0.25);
 }
-
-.heroImg{
-    width: 50%;
-    z-index: 1;
-    animation: rotate 2s infinite ease-in-out;
+.contactBtn:hover{
+    background-color: rgb(29, 29, 84);
 }
+
+.devImg{
+    position: relative;
+    width: 40%;
+    z-index: 1;
+    background-color: blue;
+    animation: rotate 2s infinite ease-in-out;
+    border-radius: 50%;
+    padding: 4px;
+    background: linear-gradient(135deg,rgb(84, 251, 0),rgb(6, 252, 203) 50%,#c259f2 50%);
+    background-size: 250%;
+    background-position: 100% 100%;
+    transition: background 1s;
+    /* box-shadow:10px 10px 20px rgb(11, 1, 1) ; */
+    /* filter: drop-shadow(10px 10px 20px); */
+    /* overflow: hidden; */
+}
+.devImg:hover{
+    background-position: 0% 0%;
+}
+
 
 @keyframes rotate {
     0%{
@@ -103,6 +122,18 @@
     .content{
         align-items: center;
     }
+
+    .topBlur{
+        display: none;
+    }
+    .title{
+        font-size: 45px;
+    }
+    .devImg{
+        width: 60%;
+        margin-bottom: 20px;
+    }
+    
     
 }
 
